refactor: Some more PlayerGroup fields